# lynos

./: .dockerignore  .gitignore  Dockerfile  README.md  api_secrets.toml.secret  docker-compose.yml  lynos.py  pyproject.toml  serve.py  track_info.py
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
tidbyt/: lynos.star
